# champions-agent

./: .gitignore  Cargo.toml  README.md
apps/desktop/: Cargo.toml
apps/desktop/src/: application.rs  battle_selection.rs  capture.rs  composition.rs  infrastructure.rs  main.rs  observability.rs  party.rs  recognition.rs  services.rs  ui.rs
apps/desktop/src/damage/: calc.rs  loader.rs  models.rs
apps/desktop/src/domain/: damage.rs  damage_calc.rs  party.rs  services.rs
apps/desktop/src/infrastructure/: damage.rs
apps/desktop/src/party/: cutout.rs  identifier.rs  ocr.rs
apps/desktop/src/ui/: app.rs  components.rs  pokemon.rs  subscriptions.rs
apps/desktop/src/ui/components/: video_preview.rs  video_preview.wgsl
crates/champions-application/: Cargo.toml
crates/champions-application/src/: errors.rs  lib.rs  ports.rs  use_cases.rs
crates/champions-application/src/ports/: catalog_repository.rs  ocr_engine.rs  party_identifier.rs  party_repository.rs  recognition_image_extractor.rs  usage_fetcher.rs  usage_repository.rs
crates/champions-application/src/use_cases/: build_selection_support.rs  calculate_damage.rs  detect_battle_result_phase.rs  detect_selection_screen.rs  get_pokemon_usage.rs  identify_opponent_party.rs  load_party.rs  refresh_usage_data.rs  save_party.rs  suggest_names.rs
crates/champions-application/tests/: use_case_tests.rs
crates/champions-domain/: Cargo.toml
crates/champions-domain/src/: battle.rs  catalog.rs  lib.rs  party.rs  recognition.rs  usage.rs
crates/champions-domain/src/battle/: damage_formula.rs  damage_input.rs
crates/champions-domain/src/catalog/: battle_master_data.rs
crates/champions-domain/src/party/: saved_party.rs
crates/champions-domain/src/recognition/: recognized_party.rs  screen_state.rs
crates/champions-domain/src/usage/: pokemon_usage_summary.rs
crates/champions-infrastructure/: Cargo.toml
crates/champions-infrastructure/src/: capture.rs  config.rs  fetcher.rs  lib.rs  persistence.rs  usage_id_mapping.rs  vision.rs
crates/champions-infrastructure/src/capture/: opencv_capture_device.rs  preview_converter.rs
crates/champions-infrastructure/src/persistence/: atomic_write.rs  csv_catalog_repository.rs  json_party_repository.rs  json_usage_repository.rs
crates/champions-infrastructure/src/vision/: cropper.rs  manga_ocr_engine.rs  onnx_party_identifier.rs  recognition_adapter.rs
crates/champions-interface/: Cargo.toml
crates/champions-interface/src/: command.rs  event.rs  lib.rs  recognition_view.rs  types.rs
crates/champions-runtime/: Cargo.toml
crates/champions-runtime/src/: builder.rs  frame.rs  handle.rs  latest.rs  lib.rs  preview.rs  recognition.rs  scheduler.rs  shutdown.rs  traits.rs
crates/champions-runtime/tests/: fake_frame_source.rs  runtime_integration.rs
docs/: 00_index.md  01_current_state.md  02_decisions_and_principles.md  03_target_architecture.md  04_workspace_directory_structure.md  05_crate_contracts.md  06_runtime_and_iced_preview.md  07_use_cases_and_ports.md  08_data_boundaries.md  09_migration_plan.md  10_testing_performance_operations.md  11_agent_checklist.md  P0_baseline.md
resources/master_data/: pokemon_abilities.csv
scripts/: ci_guards.sh  crop_image_with_config.py  cutout.py  download_pokemon_images.py  export_dino.py  get_usage.py  ocr_japanese.py  ocr_japanese_local.py  refresh_usage_data.py
src/: damage.rs  domain.rs  lib.rs  main.rs  party.rs  ui.rs
src/application/: party_service.rs
src/damage/: calc.rs  loader.rs  models.rs
src/domain/: damage.rs  master_data.rs  mod.rs  party.rs
src/infrastructure/: mod.rs  party_identifier_impl.rs
src/infrastructure/damage/: calc_impl.rs
src/party/: cutout.rs  identifier.rs
src/ui/: app.rs  pokemon.rs
