[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "crates/champions-domain",
    "crates/champions-application",
    "crates/champions-infrastructure",
    "crates/champions-runtime",
    "crates/champions-interface",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
