[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "crates/champions-domain",
    "crates/champions-application",
    "crates/champions-infrastructure",
    "crates/champions-runtime",
    "crates/champions-interface",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[profile.dev.package."champions-runtime"]
opt-level = 3

[profile.dev.package."champions-infrastructure"]
opt-level = 3

[profile.dev.package."champions-agent-desktop"]
opt-level = 2
