[package]
name = "champions-agent-desktop"
version.workspace = true
edition.workspace = true

[lib]
name = "usage_fetcher"
path = "src/lib.rs"

[[bin]]
name = "champions-agent"
path = "src/main.rs"

[dependencies]
champions-domain = { path = "../../crates/champions-domain" }
champions-application = { path = "../../crates/champions-application" }
champions-infrastructure = { path = "../../crates/champions-infrastructure" }
champions-runtime = { path = "../../crates/champions-runtime" }
champions-interface = { path = "../../crates/champions-interface" }

reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow.workspace = true
indexmap = { version = "2", features = ["serde"] }
opencv = { version = "0.93", features = ["videoio", "highgui", "imgcodecs"] }
ort = { version = "=2.0.0-rc.12", features = ["cuda"] }
ndarray = "0.17"
rayon = "1.10"
csv = "1.3"
iced = { version = "0.14", features = ["tokio"] }
ocrs = "0.7.0"
manga-ocr-rs = "0.1.3"
image = "0.25.10"
tokio = { version = "1.52.2", features = ["full"] }

[dev-dependencies]
rstest = "0.21.0"
