[package]
name = "champions-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
champions-domain = { path = "../champions-domain" }
champions-application = { path = "../champions-application" }
champions-interface = { path = "../champions-interface" }
champions-runtime = { path = "../champions-runtime" }
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
csv = "1.3"
image = "0.25"
manga-ocr-rs = "0.1.3"
ort = { version = "=2.0.0-rc.12", features = ["cuda"] }
ndarray = "0.17"
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1"
indexmap = { version = "2", features = ["serde"] }
